--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <p>These are the stories of our customers who have joined us with great <br>pleasure when using this crazy feature.</p>
         <div id="opinions">
             <div id="opinions-wrapper">
-                <!--div class="opinion">
+                <div class="opinion">
                     <div class="opinion-head">
                         <img src="./images/Viezh_Robert_image.png" alt="Profile Image">
                         <div class="identity-data">
@@ -170,8 +170,8 @@
                         <p>“This is very unusual for my business that currently requires a virtual private network that has high security.”.</p>
                     </div>
                 </div>
-                <!--- From this place i added lorem comments-->
-                <!--div class="opinion">
+                <!-- From this place i added lorem comments-->
+                <div class="opinion">
                     <div class="opinion-head">
                         <img src="./images/Yessica_Christy_image.png" alt="Profile Image">
                         <div class="identity-data">
@@ -209,7 +209,7 @@
                     <div class="opinion-body">
                         <p>“Nobody likes me and i fell bad about it.”.</p>
                     </div>
-                </div-->
+                </div>
             </div>
         </div>
         <div class="slide-indicator">
