Slider without animation

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <header id="tile-0">
-        <img src="./images/Logo.png" alt="LaslesVPN - Logo">
+        <a href="#"><img src="./images/Logo.png" alt="LaslesVPN - Logo"></a>
         <nav>
             <ul id="navbar">
-                <li>About</li>
-                <li>Features</li>
-                <li>Pricing</li>
-                <li>Testimonials</li>
-                <li>Help</li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Testimonials</a></li>
+                <li><a href="#">Help</a></li>
             </ul>
         </nav>
         <div id="log-in">
-            <p id="Sin">Sign In</p>
-            <p id="Sup">Sign Up</p>
+            <p id="Sin"><a href="#">Sign In</a></p>
+            <p id="Sup"><a href="#">Sign Up</a></p>
         </div>
     </header>
     <section id="tile-1">
